Fix overlapping message headers in print view

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -3301,7 +3301,7 @@ div.topic_edit_spinner .loading_indicator_spinner {
         content: none !important;
     }
 
-    /* this is the one that makes the header stay on top and messages not overlap with it */
+    /* this is the one that actually makes the header stay */
     .header {
         position: relative;
         z-index: 102; /* Needs to be higher than .alert-bar-container */
@@ -3309,5 +3309,12 @@ div.topic_edit_spinner .loading_indicator_spinner {
         height: $header_height;
         padding-bottom: $header_padding_bottom;
         background-color: inherit;
+    }
+
+    .fixed-app {
+        width: 100%;
+        position: relative;
+        z-index: 98;
+        left: 0;
     }
 }
